<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imglogoTrans"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/mecanico"
        android:transitionName="imgregistroTrans"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/lblbienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/textinicio"
        android:textColor="@color/colorletras"
        android:textSize="34dp"
        android:textStyle="bold"
        android:transitionName="BienvenidoTrans" />

    <TextView
        android:id="@+id/lblnota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/lbllogin"
        android:textSize="24dp"
        android:textStyle="bold"
        android:transitionName="RegTrans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblusuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/inputcorreo"
            android:transitionName="emailTrans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_bold" />
        </com.google.android.material.textfield.TextInputLayout>

        //LBLCONTRASEÑA

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblpassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/inputpass"
            app:passwordToggleEnabled="true"
            android:transitionName="passTrans">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_bold"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/lblolvidar"
            android:textAlignment="textEnd"
            android:textColor="@color/colorletras"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btninicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="70dp"
            android:onClick="validar"
            android:text="@string/btninicio"
            android:transitionName="btnregistroTrans" />

        <TextView
            android:id="@+id/lblregistro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/advent_pro_bold"
            android:text="@string/lblregistro"
            android:textAlignment="textEnd"
            android:textColor="@color/colorletras"
            android:textSize="20dp"
            android:textStyle="bold"
            android:transitionName="userTrans"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


</LinearLayout>