<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mecanimex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mecanimex.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_gruasestrella"
            app:destination="@id/gruasestrella" />
        <action
            android:id="@+id/action_nav_gallery_to_ubi"
            app:destination="@id/ubi" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mecanimex.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/gruasestrella"
        android:name="com.example.mecanimex.gruasestrella"
        android:label="fragment_gruasestrella"
        tools:layout="@layout/fragment_gruasestrella" />
    <fragment
        android:id="@+id/ubi"
        android:name="com.example.mecanimex.ubi"
        android:label="fragment_ubi"
        tools:layout="@layout/fragment_ubi" />
</navigation>